<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2024 CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools">

<!--  DO NOT add an app_name property when using this starter template; it is created automatically.-->
<!--  <string name="app_name">App Starter</string>-->

  <string name="login_failure_message">Unable to sign in with provided credentials.</string>
  <string name="sign_out">Sign out</string>

  <string name="local_display_name_hint">Local Display Name</string>
  <string name="google_display_name_hint">Google Display Name</string>
  <string name="bearer_token_hint">Bearer Token</string>
  <string name="permissions_granted_hint">Permissions Granted</string>

  <string name="permissions_dialog_title">Permissions Needed</string>
  <string name="settings_label">Settings</string>

  <string name="access_fine_location_explanation" tools:keep="@string/access_fine_location_explanation">This app uses location information for …</string>
  <string name="access_coarse_location_explanation" tools:keep="@string/access_coarse_location_explanation">This app uses location information for …</string>
  <string name="post_notifications_explanation" tools:keep="@string/access_post_notifications_explanation">This app uses notifications for …</string>
  <string name="foreground_service_remote_messaging_explanation" tools:keep="@string/foreground_service_remote_messaging_explanation">This app uses messaging to add the ability to challenge friends to beat your scores!</string>
  <string name="selectable_text_pref_key">selectable_text_pref</string>
  <string name="selectable_text_pref_title">Selectable text</string>
  <string name="selectable_text_pref_summary_on">Uneditable text is selectable.</string>
  <string name="selectable_text_pref_summary_off">Uneditable text is not selectable.</string>
  <string name="league_key">preferred_league</string>
  <string name="league_title">Preferred league</string>
  <string name="teamle">Teamle</string>
  <string name="settings">Settings</string>
  <string name="sport_key">preferred_sport</string>
  <string name="sport_title">Preferred sport</string>
  <string name="guess_the_team">guess the team</string>
  <string name="new_game_label">new game</string>
  <string name="team_location">Team location</string>
  <string name="year_formed">Year formed</string>
  <string name="kit_color">Primary team color</string>
  <string name="team_name">Team name</string>
  <string name="congratulations">Congratulations!</string>
  <string name="new_game">New game</string>
  <string name="success_label">Success</string>
  <string name="scores_label">Scores</string>
  <string name="navigate_label">Navigate to high scores</string>
  <string name="duration_format">%1$d:%2$02d:%3$04.1f</string>
  <string name="league_size">league size</string>
  <string name="number_of_guesses">guess count</string>
  <string name="game_duration">game duration</string>
  <string name="timestamp">timestamp</string>

</resources>