<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <LinearLayout
    android:id="@+id/scores_headers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:padding="@dimen/half_dynamic_spacing"
      android:text="@string/league_size"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:padding="@dimen/half_dynamic_spacing"
      android:text="@string/number_of_guesses"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="4"
      android:padding="@dimen/half_dynamic_spacing"
      android:text="@string/game_duration"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="4"
      android:padding="@dimen/half_dynamic_spacing"
      android:text="@string/timestamp"/>

  </LinearLayout>

  <ListView
    android:id="@+id/scores"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/scores_headers"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:listitem="@layout/item_scores"/>


</androidx.constraintlayout.widget.ConstraintLayout>