<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2024 CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/half_dynamic_spacing"
  tools:context=".controller.MainActivity">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/guess_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:hintAnimationEnabled="true"
    app:hintEnabled="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <AutoCompleteTextView
      android:id="@+id/guess_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:hint="@string/guess_the_team"/>

  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout
    android:id="@+id/column_headers"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/half_dynamic_spacing"
    app:layout_constraintTop_toBottomOf="@id/guess_layout">

    <TextView
      android:id="@+id/team_name_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="4"
      android:text="@string/team_name"
      android:padding="@dimen/half_dynamic_spacing"
      style="@style/AppTheme.GuessText.Title"/>

    <TextView
      android:id="@+id/team_location_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="4"
      android:text="@string/team_location"
      android:padding="@dimen/half_dynamic_spacing"
      style="@style/AppTheme.GuessText.Title"/>

    <TextView
      android:id="@+id/year_formed_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:text="@string/year_formed"
      android:padding="@dimen/half_dynamic_spacing"
      style="@style/AppTheme.GuessText.Centered.Title"/>

    <TextView
      android:id="@+id/kit_color_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:text="@string/kit_color"
      android:padding="@dimen/half_dynamic_spacing"
      style="@style/AppTheme.GuessText.Centered.Title"/>

  </LinearLayout>

  <ListView
    android:id="@+id/guesses"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/column_headers"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:listitem="@layout/item_guesses"/>

</androidx.constraintlayout.widget.ConstraintLayout>